minor update to cv

--- a/main.tex
+++ b/main.tex
@@ -93,8 +93,8 @@
 \section{Summary}
  Electronic Engineer with 3 years of industry experience.\\
 1\textsuperscript{st} Class Honours Masters degree in Electronic \& Computer Engineering from University College Dublin.\\
-Experienced in \textbf{Verilog, Python, C, Java, MATLAB \& Linux}.\\
-Interested primarily in digital signal processing, digital ASIC design and embedded systems.
+Experienced in \textbf{Verilog, Python, C, Java \& Linux}.\\
+Interested primarily in Digital Signal Processing.
 \bigskip
 %---------SKILLS-----------
 \section{Technical Skills}
@@ -119,6 +119,7 @@ Interested primarily in digital signal processing, digital ASIC design and embed
       {Digital Design Engineer}{Jan 2020 -- Present}
       \resumeItemListStart
          \resumeGenItem{Front-End Digital Design} 
+         \resumeGenItem{Designed a CIC based anti-aliasing filter} 
          \resumeGenItem{Developed software to automatically generate a Verilog implementation of a frequently redesigned block, along with its System Verilog testbench.}
       \resumeItemListEnd
       \bigskip
